--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "gatsby-material-ui-darkmode",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/icons": "latest",
-    "gatsby": "latest",
-    "gatsby-plugin-material-ui": "latest",
-    "gatsby-plugin-react-helmet": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-helmet": "latest"
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "gatsby": "^3.14.2",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0"
   },
   "scripts": {
     "develop": "gatsby develop",
