--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "gatsby": "^3.14.2",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "gatsby": "latest",
+    "gatsby-plugin-react-helmet": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-helmet": "latest"
   },
   "scripts": {
     "develop": "gatsby develop",
